#326.equalheights : wrapping fix (toch nodig: anders vult het uit op 1 rij)

--- a/src/styles/components/_whitebox.scss
+++ b/src/styles/components/_whitebox.scss
@@ -73,12 +73,14 @@
 
 .dso-equal-heights {
   display: flex;
+  flex-wrap: wrap;
 
   > div {
     display: flex;
 
     div.dso-whitebox {
       min-height: 0;
+      padding-bottom: $u2;
     }
   }
 }
